[package]
name = "rustpotter-java"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
log = "^0.4.6"
rustpotter = "0.2.0"

[build-dependencies]
flapigen = "0.6.0-pre9"
bindgen = { version = "0.57.0", default-features = false}